# vector-search-soc

./: inference_pipeline_example.json  upload_model.sh
vector-search-soc/: pyproject.toml
vector-search-soc/vector_search_soc/: vector_search_demo.ipynb
