[tool.poetry]
name = "vector-search-soc"
version = "0.1.0"
description = ""
authors = ["fzagar <filip.zagar@diverto.hr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
elasticsearch = "^8.17.1"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
